--- a/chat/templates/chat_list.html
+++ b/chat/templates/chat_list.html
@@ -10,11 +10,12 @@
 <div class="container mt-5">
     <h2 class="text-center mb-4">Your Chats</h2>
     <ul class="list-group">
-        {% for chat in chats %}
+        {% for chat in conversations %}
+        {{chat}}
         <li class="list-group-item">
             <a href="{% url 'chat_detail' chat.pk %}">
                 <div class="d-flex justify-content-between align-items-center">
-                    <span>{{ chat.name }}</span>
+                    <span>{{ chat.pk }}</span>
                     <span class="badge bg-primary rounded-pill">{{ chat.unread_count }}</span>
                 </div>
             </a>
